--- a/campaigns/templates/base.html
+++ b/campaigns/templates/base.html
@@ -16,6 +16,7 @@
                     <span class="navbar-text me-3">Hello, {{ user.username }}</span>
                     {% if user.is_superuser %}
                         <a class="nav-link" href="{% url 'admin_dashboard' %}">Admin Dashboard</a>
+                        <a class="nav-link" href="{% url 'admin_users' %}">Manage Users</a>
                     {% endif %}
                     <!-- Change logout to use POST form -->
                     <form method="post" action="{% url 'logout' %}" class="d-inline">
