--- a/campaigns/templates/campaigns/admin_dashboard.html
+++ b/campaigns/templates/campaigns/admin_dashboard.html
@@ -14,6 +14,12 @@
             </div>
         </div>
 
+        <div class="mb-3">
+            <a href="{% url 'admin_users' %}" class="btn btn-outline-dark">
+                <i class="fas fa-users"></i> Manage Users
+            </a>
+        </div>
+
         <!-- Status Filter Buttons -->
         <div class="card mb-4">
             <div class="card-body">
@@ -85,7 +91,13 @@
                                         -
                                     {% endif %}
                                 </td>
-                                <td>{{ ad.user.username }}</td>
+                                <td>
+                                    {% if ad.user %}
+                                        {{ ad.user.username }}
+                                    {% else %}
+                                        <span class="text-muted">(deleted user)</span>
+                                    {% endif %}
+                                </td>
                                 <td>{{ ad.entry_date|date:"M d, Y" }}</td>
                                 <td>
                                     {% if ad.start_date %}
@@ -140,7 +152,13 @@
                                                             {{ ad.get_status_display }}
                                                         </span>
                                                     </p>
-                                                    <p><strong>Employee:</strong> {{ ad.user.get_full_name|default:ad.user.username }}</p>
+                                                    <p><strong>Employee:</strong>
+                                                        {% if ad.user %}
+                                                            {{ ad.user.get_full_name|default:ad.user.username }}
+                                                        {% else %}
+                                                            <span class="text-muted">(deleted user)</span>
+                                                        {% endif %}
+                                                    </p>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <h6>Dates</h6>
