--- a/campaigns/templates/campaigns/dashboard.html
+++ b/campaigns/templates/campaigns/dashboard.html
@@ -25,6 +25,7 @@
                             <tr>
                                 <th>Ad Name</th>
                                 <th>Business Name</th>
+                                <th>Mobile Number</th>
                                 <th>Completed Date</th>
                                 <th>Actions</th>
                             </tr>
@@ -34,6 +35,7 @@
                             <tr>
                                 <td>{{ ad.ad_name }}</td>
                                 <td>{{ ad.business_name }}</td>
+                                <td>{{ ad.mobile_number }}</td>
                                 <td>{{ ad.end_date }}</td>
                                 <td>
                                     {% if not user.is_superuser %}
@@ -67,6 +69,7 @@
                             <tr>
                                 <th>Ad Name</th>
                                 <th>Business Name</th>
+                                <th>Mobile Number</th>
                                 <th>Start Date</th>
                                 <th>End Date</th>
                                 <th>Amount</th>
@@ -77,6 +80,7 @@
                             <tr>
                                 <td>{{ ad.ad_name }}</td>
                                 <td>{{ ad.business_name }}</td>
+                                <td>{{ ad.mobile_number }}</td>
                                 <td>{{ ad.start_date }}</td>
                                 <td>{{ ad.end_date }}</td>
                                 <td>₹{{ ad.amount }}</td>
@@ -102,6 +106,7 @@
                             <tr>
                                 <th>Ad Name</th>
                                 <th>Business Name</th>
+                                <th>Mobile Number</th>
                                 <th>Amount</th>
                                 <th>Last 4 UPI</th>
                                 <th>Entry Date</th>
@@ -112,6 +117,7 @@
                             <tr>
                                 <td>{{ ad.ad_name }}</td>
                                 <td>{{ ad.business_name }}</td>
+                                <td>{{ ad.mobile_number }}</td>
                                 <td>₹{{ ad.amount }}</td>
                                 <td>{{ ad.upi_last_four }}</td>
                                 <td>{{ ad.entry_date|date:"M d, Y" }}</td>
@@ -136,7 +142,8 @@
                         <thead>
                             <tr>
                                 <th>Ad Name</th>
-                                <th>Business Name</th>
+                                <th>Business Name</th>  
+                                <th>Mobile Number</th>
                                 <th>Entry Date</th>
                                 <th>Notes</th>
                                 <th>Actions</th>
@@ -147,6 +154,7 @@
                             <tr>
                                 <td>{{ ad.ad_name }}</td>
                                 <td>{{ ad.business_name }}</td>
+                                <td>{{ ad.mobile_number }}</td>
                                 <td>{{ ad.entry_date|date:"M d, Y" }}</td>
                                 <td>{{ ad.notes|truncatewords:10 }}</td>
                                 <td>
@@ -178,6 +186,7 @@
                             <tr>
                                 <th>Ad Name</th>
                                 <th>Business Name</th>
+                                <th>Mobile Number</th>
                                 <th>Start Date</th>
                                 <th>End Date</th>
                                 <th>Amount</th>
@@ -188,6 +197,7 @@
                             <tr>
                                 <td>{{ ad.ad_name }}</td>
                                 <td>{{ ad.business_name }}</td>
+                                <td>{{ ad.mobile_number }}</td>
                                 <td>{{ ad.start_date }}</td>
                                 <td>{{ ad.end_date }}</td>
                                 <td>₹{{ ad.amount }}</td>
