--- a/campaigns/templates/campaigns/verify_payment.html
+++ b/campaigns/templates/campaigns/verify_payment.html
@@ -13,7 +13,7 @@
                         <h6>Ad Details</h6>
                         <p><strong>Business:</strong> {{ ad.business_name }}</p>
                         <p><strong>Amount:</strong> ₹{{ ad.amount }}</p>
-                        <p><strong>Last 4 UPI Digits:</strong> {{ ad.upi_last_four }}</p>
+                        <!-- <p><strong>Last 4 UPI Digits:</strong> {{ ad.upi_last_four }}</p> -->
                         <p><strong>Employee:</strong> {{ ad.user.username }}</p>
                     </div>
                 </div>
